mdm_Location/MDM_Location/src/objects/MDM_Location_Stage__c.object
<CustomObject>
    <description>MDM_Location_Stage</description>
    <fields>
        <fullName>Address_1__c</fullName>
        <description>Address 1</description>
        <inlineHelpText>Address 1</inlineHelpText>
        <label>Address line 1:</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <description>Address 2</description>
        <inlineHelpText>Address 2</inlineHelpText>
        <label>Address line 2:</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_3__c</fullName>
        <description>Address 3</description>
        <inlineHelpText>Address 3</inlineHelpText>
        <label>Address line 3:</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stage</description>
        <inlineHelpText>Stage</inlineHelpText>
        <label>Banner</label>
        <referenceTo>MDM_Banner__c</referenceTo>
        <relationshipLabel>Locations_Stage</relationshipLabel>
        <relationshipName>Locations_Stage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CensusBlock__c</fullName>
        <label>Census Block</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Census_Tract__c</fullName>
        <description>Census Tract</description>
        <inlineHelpText>Census Tract</inlineHelpText>
        <label>Census Tract</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <inlineHelpText>City</inlineHelpText>
        <label>City</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfirmationSourceSystem__c</fullName>
        <label>ConfirmationSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <referenceTo>MDM_Country__c</referenceTo>
        <relationshipLabel>Locations_Stage</relationshipLabel>
        <relationshipName>Locations_Stage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>County</description>
        <inlineHelpText>County</inlineHelpText>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMA__c</fullName>
        <label>DMA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataOverrideFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Override Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <description>Effective End Date</description>
        <inlineHelpText>Effective End Date</inlineHelpText>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <description>Effective Start Date</description>
        <inlineHelpText>Effective Start Date</inlineHelpText>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FIP__c</fullName>
        <label>FIPs</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoLevel__c</fullName>
        <description>Lat/Long Accuracy</description>
        <inlineHelpText>Lat/Long Accuracy</inlineHelpText>
        <label>GeoLevel</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoScore__c</fullName>
        <description>Lat/Lon Score</description>
        <inlineHelpText>Lat/Lon Score</inlineHelpText>
        <label>GeoScore</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GoldenRecordID__c</fullName>
        <defaultValue>&quot;New Record: Temp Golden Record ID&quot;</defaultValue>
        <description>Golden Record ID</description>
        <externalId>true</externalId>
        <inlineHelpText>Golden Record ID from BOOMI MDM</inlineHelpText>
        <label>Golden Record ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GooglePlaceID__c</fullName>
        <description>GooglePlaceID</description>
        <inlineHelpText>GooglePlaceID</inlineHelpText>
        <label>GooglePlaceID</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdFromSource__c</fullName>
        <externalId>true</externalId>
        <label>IdFromSource</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastFieldConfirmationDate__c</fullName>
        <label>Last Field Confirmation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>Latitude</description>
        <inlineHelpText>Latitude</inlineHelpText>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocationIsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Location Status</description>
        <inlineHelpText>Location Status</inlineHelpText>
        <label>Location Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LocationStatus__c</fullName>
        <description>Store Outlet Status Indicator</description>
        <inlineHelpText>Store Outlet Status Indicator</inlineHelpText>
        <label>Location Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reclassified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_Number__c</fullName>
        <description>Location Number</description>
        <inlineHelpText>Location Number</inlineHelpText>
        <label>Location Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <description>Location Type [Emploee / Store]</description>
        <inlineHelpText>Emploee / Store</inlineHelpText>
        <label>Location Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domicile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <description>Longitude</description>
        <inlineHelpText>Longitude</inlineHelpText>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSA__c</fullName>
        <label>MSA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwningCompany__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>OwningCompany</description>
        <inlineHelpText>OwningCompany</inlineHelpText>
        <label>Owning Company</label>
        <referenceTo>MDM_OwningCompany__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations_OwningCompany1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplacedByID__c</fullName>
        <label>Replaced By ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSystem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SourceSystem</label>
        <referenceTo>MDM_Source__c</referenceTo>
        <relationshipLabel>Locations_Stage</relationshipLabel>
        <relationshipName>Locations_Stage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>MDM_State__c</referenceTo>
        <relationshipLabel>Locations_Stage</relationshipLabel>
        <relationshipName>Locations_Stage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Store_Phone_Number__c</fullName>
        <description>Store Phone Number</description>
        <inlineHelpText>Store Phone Number</inlineHelpText>
        <label>Store Phone Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDLinxNumber__c</fullName>
        <description>TDLinxNumber</description>
        <inlineHelpText>TDLinx #</inlineHelpText>
        <label>TDLinxNumber</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <description>Time Zone</description>
        <inlineHelpText>Time Zone</inlineHelpText>
        <label>Time Zone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradeChannel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>TradeChannel</description>
        <inlineHelpText>TradeChannel</inlineHelpText>
        <label>TradeChannel</label>
        <referenceTo>MDM_TradeChannel__c</referenceTo>
        <relationshipLabel>Locations_Stage</relationshipLabel>
        <relationshipName>Locations_Stage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TradeSubChannel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>TradeSubChannel</description>
        <inlineHelpText>TradeSubChannel</inlineHelpText>
        <label>TradeSubChannel</label>
        <referenceTo>MDM_TradeSubChannel__c</referenceTo>
        <relationshipLabel>Locations_Stage</relationshipLabel>
        <relationshipName>Locations_Stage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TransferredToMDM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SF logic:  Reset value to FALSE whenever new record is inserted or existing record updated caused by user action.</description>
        <inlineHelpText>SF logic:  Reset value to FALSE whenever new record is inserted or existing record updated caused by user action.</inlineHelpText>
        <label>TransferredToMDM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UTCOffset__c</fullName>
        <label>UTC Time Zone Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UploadName__c</fullName>
        <label>UploadName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip4__c</fullName>
        <label>Zip4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Location_Stage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>IdFromSource__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>UploadName__c</columns>
        <columns>City__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>DataOverrideFlag__c</columns>
        <columns>TransferredToMDM__c</columns>
        <filterScope>Everything</filterScope>
        <label>View 1</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Location_Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations_Stage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>